// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshots > 200-card column at 80×24 1`] = `
"
┌ yuzie · yuzie-dev ───────────────────────────────────── ● 0 online · synced ─┐
│                                                                              │
│ TODO (200)                                                                   │
│ ▸#1 Backlog item 1                                                         — │
│  #2 Backlog item 2                                                         — │
│  #3 Backlog item 3                                                         — │
│  #4 Backlog item 4                                                         — │
│  #5 Backlog item 5                                                         — │
│  #6 Backlog item 6                                                         — │
│  #7 Backlog item 7                                                         — │
│  #8 Backlog item 8                                                         — │
│  #9 Backlog item 9                                                         — │
│  #10 Backlog item 10                                                       — │
│  #11 Backlog item 11                                                       — │
│  #12 Backlog item 12                                                       — │
│  #13 Backlog item 13                                                       — │
│  #14 Backlog item 14                                                       — │
│  #15 Backlog item 15                                                       — │
│  #16 Backlog item 16                                                       — │
│ ↓ 187 more                                                                   │
│                                                                              │
│                                                                              │
│ ? help  / search  n new  c claim  m move  a assign  ↵ open  q quit           │
└──────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`snapshots > 200-card column at 100×30 1`] = `
"
┌ yuzie · yuzie-dev ───────────────────────────────────────────────────────── ● 0 online · synced ─┐
│                                                                                                  │
│ ┌───────── TODO (200) ──────────┬───────── DOING (0/2) ─────────┬────────── DONE (0) ──────────┐ │
│ │                               │                               │                              │ │
│ │▸#1 Backlog item 1             │                               │                              │ │
│ │     —                         │                               │                              │ │
│ │                               │                               │                              │ │
│ │ #2 Backlog item 2             │                               │                              │ │
│ │     —                         │                               │                              │ │
│ │                               │                               │                              │ │
│ │ #3 Backlog item 3             │                               │                              │ │
│ │     —                         │                               │                              │ │
│ │                               │                               │                              │ │
│ │ #4 Backlog item 4             │                               │                              │ │
│ │     —                         │                               │                              │ │
│ │                               │                               │                              │ │
│ │ #5 Backlog item 5             │                               │                              │ │
│ │     —                         │                               │                              │ │
│ │                               │                               │                              │ │
│ │ #6 Backlog item 6             │                               │                              │ │
│ │     —                         │                               │                              │ │
│ │                               │                               │                              │ │
│ │                               │                               │                              │ │
│ │                               │                               │                              │ │
│ │ ↓ 194 more                    │                               │                              │ │
│ └───────────────────────────────┴───────────────────────────────┴──────────────────────────────┘ │
│                                                                                                  │
│                                                                                                  │
│ ? help  / search  n new  c claim  m move  a assign  ↵ open  q quit                               │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`snapshots > 200-card column at 160×50 1`] = `
"
┌ yuzie · yuzie-dev ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────── ● 0 online · synced ─┐
│                                                                                                                                                              │
│ ┌─────────────────── TODO (200) ────────────────────┬─────────────────── DOING (0/2) ───────────────────┬──────────────────── DONE (0) ────────────────────┐ │
│ │                                                   │                                                   │                                                  │ │
│ │▸#1 Backlog item 1                                 │                                                   │                                                  │ │
│ │     —                                             │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │ #2 Backlog item 2                                 │                                                   │                                                  │ │
│ │     —                                             │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │ #3 Backlog item 3                                 │                                                   │                                                  │ │
│ │     —                                             │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │ #4 Backlog item 4                                 │                                                   │                                                  │ │
│ │     —                                             │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │ #5 Backlog item 5                                 │                                                   │                                                  │ │
│ │     —                                             │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │ #6 Backlog item 6                                 │                                                   │                                                  │ │
│ │     —                                             │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │ #7 Backlog item 7                                 │                                                   │                                                  │ │
│ │     —                                             │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │ #8 Backlog item 8                                 │                                                   │                                                  │ │
│ │     —                                             │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │ #9 Backlog item 9                                 │                                                   │                                                  │ │
│ │     —                                             │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │ #10 Backlog item 10                               │                                                   │                                                  │ │
│ │     —                                             │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │ #11 Backlog item 11                               │                                                   │                                                  │ │
│ │     —                                             │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │ #12 Backlog item 12                               │                                                   │                                                  │ │
│ │     —                                             │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │ #13 Backlog item 13                               │                                                   │                                                  │ │
│ │     —                                             │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │ ↓ 187 more                                        │                                                   │                                                  │ │
│ └───────────────────────────────────────────────────┴───────────────────────────────────────────────────┴──────────────────────────────────────────────────┘ │
│                                                                                                                                                              │
│                                                                                                                                                              │
│ ? help  / search  n new  c claim  m move  a assign  ↵ open  q quit                                                                                           │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`snapshots > empty at 80×24 1`] = `
"
┌ yuzie · yuzie-dev ───────────────────────────────────── ● 0 online · synced ─┐
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                No cards yet.                                 │
│                                                                              │
│              Create the first one: yuzie add "Your first card"               │
│                               or press n here.                               │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│ ? help  / search  n new  c claim  m move  a assign  ↵ open  q quit           │
└──────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`snapshots > empty at 100×30 1`] = `
"
┌ yuzie · yuzie-dev ───────────────────────────────────────────────────────── ● 0 online · synced ─┐
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                          No cards yet.                                           │
│                                                                                                  │
│                        Create the first one: yuzie add "Your first card"                         │
│                                         or press n here.                                         │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│ ? help  / search  n new  c claim  m move  a assign  ↵ open  q quit                               │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`snapshots > empty at 160×50 1`] = `
"
┌ yuzie · yuzie-dev ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────── ● 0 online · synced ─┐
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                        No cards yet.                                                                         │
│                                                                                                                                                              │
│                                                      Create the first one: yuzie add "Your first card"                                                       │
│                                                                       or press n here.                                                                       │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
│ ? help  / search  n new  c claim  m move  a assign  ↵ open  q quit                                                                                           │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`snapshots > three columns at 80×24 1`] = `
"
┌ yuzie · yuzie-dev ───────────────────────────────────── ● 2 online · synced ─┐
│                                                                              │
│ TODO (2)                                                                     │
│ ▸#12 Fix login redirect loop                                  —  p1 bug auth │
│  #14 Write the onboarding guide for new contributors                       — │
│ DOING (2/2)                                                                  │
│  #15 Rate-limit the public API                                @priya ● 3c/7f │
│  #18 Retry webhook deliveries with backoff         @rahul+1 1c/2f ⚠4d  infra │
│ DONE (1)                                                                     │
│  #9 Ship v0.1                                                           — 1d │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│ ? help  / search  n new  c claim  m move  a assign  ↵ open  q quit           │
└──────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`snapshots > three columns at 100×30 1`] = `
"
┌ yuzie · yuzie-dev ───────────────────────────────────────────────────────── ● 2 online · synced ─┐
│                                                                                                  │
│ ┌────────── TODO (2) ───────────┬───────── DOING (2/2) ─────────┬────────── DONE (1) ──────────┐ │
│ │                               │                               │                              │ │
│ │▸#12 Fix login redirect loop   │ #15 Rate-limit the public API │ #9 Ship v0.1                 │ │
│ │     —  p1 bug auth            │     @priya ● 3c/7f            │     — 1d                     │ │
│ │                               │                               │                              │ │
│ │ #14 Write the onboarding guid…│ #18 Retry webhook deliveries …│                              │ │
│ │     —                         │     @rahul+1 1c/2f ⚠4d  infra │                              │ │
│ │                               │                               │                              │ │
│ │                               │                               │                              │ │
│ │                               │                               │                              │ │
│ │                               │                               │                              │ │
│ │                               │                               │                              │ │
│ │                               │                               │                              │ │
│ │                               │                               │                              │ │
│ │                               │                               │                              │ │
│ │                               │                               │                              │ │
│ │                               │                               │                              │ │
│ │                               │                               │                              │ │
│ │                               │                               │                              │ │
│ │                               │                               │                              │ │
│ │                               │                               │                              │ │
│ │                               │                               │                              │ │
│ │                               │                               │                              │ │
│ └───────────────────────────────┴───────────────────────────────┴──────────────────────────────┘ │
│                                                                                                  │
│                                                                                                  │
│ ? help  / search  n new  c claim  m move  a assign  ↵ open  q quit                               │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`snapshots > three columns at 160×50 1`] = `
"
┌ yuzie · yuzie-dev ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────── ● 2 online · synced ─┐
│                                                                                                                                                              │
│ ┌──────────────────── TODO (2) ─────────────────────┬─────────────────── DOING (2/2) ───────────────────┬──────────────────── DONE (1) ────────────────────┐ │
│ │                                                   │                                                   │                                                  │ │
│ │▸#12 Fix login redirect loop                       │ #15 Rate-limit the public API                     │ #9 Ship v0.1                                     │ │
│ │     —  p1 bug auth                                │     @priya ● 3c/7f                                │     — 1d                                         │ │
│ │                                                   │                                                   │                                                  │ │
│ │ #14 Write the onboarding guide for new contributo…│ #18 Retry webhook deliveries with backoff         │                                                  │ │
│ │     —                                             │     @rahul+1 1c/2f ⚠4d  infra                     │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ │                                                   │                                                   │                                                  │ │
│ └───────────────────────────────────────────────────┴───────────────────────────────────────────────────┴──────────────────────────────────────────────────┘ │
│                                                                                                                                                              │
│                                                                                                                                                              │
│ ? help  / search  n new  c claim  m move  a assign  ↵ open  q quit                                                                                           │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`snapshots > twelve columns at 80×24 1`] = `
"
┌ yuzie · yuzie-dev ───────────────────────────────────── ● 0 online · synced ─┐
│                                                                              │
│ STAGE 1 (2)                                                                  │
│ ▸#1 Task 1 in stage 1                                                      — │
│  #13 Task 13 in stage 1                                                    — │
│ STAGE 2 (2)                                                                  │
│  #2 Task 2 in stage 2                                                      — │
│  #14 Task 14 in stage 2                                                    — │
│ STAGE 3 (2)                                                                  │
│  #3 Task 3 in stage 3                                                      — │
│  #15 Task 15 in stage 3                                                    — │
│ STAGE 4 (2)                                                                  │
│  #4 Task 4 in stage 4                                                      — │
│  #16 Task 16 in stage 4                                                    — │
│ STAGE 5 (2)                                                                  │
│  #5 Task 5 in stage 5                                                      — │
│  #17 Task 17 in stage 5                                                    — │
│ STAGE 6 (2)                                                                  │
│  #6 Task 6 in stage 6                                                      — │
│ ↓ 18 more                                                                    │
│                                                                              │
│                                                                              │
│ ? help  / search  n new  c claim  m move  a assign  ↵ open  q quit           │
└──────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`snapshots > twelve columns at 100×30 1`] = `
"
┌ yuzie · yuzie-dev ───────────────────────────────────────────────────────── ● 0 online · synced ─┐
│                                                                                                  │
│ ┌───────── STAGE 1 (2) ─────────┬───────── STAGE 2 (2) ─────────┬──────── STAGE 3 (2) ─────────┐›│
│ │                               │                               │                              │›│
│ │▸#1 Task 1 in stage 1          │ #2 Task 2 in stage 2          │ #3 Task 3 in stage 3         │›│
│ │     —                         │     —                         │     —                        │›│
│ │                               │                               │                              │›│
│ │ #13 Task 13 in stage 1        │ #14 Task 14 in stage 2        │ #15 Task 15 in stage 3       │›│
│ │     —                         │     —                         │     —                        │›│
│ │                               │                               │                              │›│
│ │                               │                               │                              │›│
│ │                               │                               │                              │›│
│ │                               │                               │                              │›│
│ │                               │                               │                              │›│
│ │                               │                               │                              │›│
│ │                               │                               │                              │›│
│ │                               │                               │                              │›│
│ │                               │                               │                              │›│
│ │                               │                               │                              │›│
│ │                               │                               │                              │›│
│ │                               │                               │                              │›│
│ │                               │                               │                              │›│
│ │                               │                               │                              │›│
│ │                               │                               │                              │›│
│ │                               │                               │                              │›│
│ └───────────────────────────────┴───────────────────────────────┴──────────────────────────────┘ │
│                                                                                                  │
│                                                                                                  │
│ ? help  / search  n new  c claim  m move  a assign  ↵ open  q quit                               │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`snapshots > twelve columns at 160×50 1`] = `
"
┌ yuzie · yuzie-dev ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────── ● 0 online · synced ─┐
│                                                                                                                                                              │
│ ┌────── STAGE 1 (2) ──────┬────── STAGE 2 (2) ──────┬────── STAGE 3 (2) ──────┬────── STAGE 4 (2) ──────┬────── STAGE 5 (2) ──────┬───── STAGE 6 (2) ──────┐›│
│ │                         │                         │                         │                         │                         │                        │›│
│ │▸#1 Task 1 in stage 1    │ #2 Task 2 in stage 2    │ #3 Task 3 in stage 3    │ #4 Task 4 in stage 4    │ #5 Task 5 in stage 5    │ #6 Task 6 in stage 6   │›│
│ │     —                   │     —                   │     —                   │     —                   │     —                   │     —                  │›│
│ │                         │                         │                         │                         │                         │                        │›│
│ │ #13 Task 13 in stage 1  │ #14 Task 14 in stage 2  │ #15 Task 15 in stage 3  │ #16 Task 16 in stage 4  │ #17 Task 17 in stage 5  │ #18 Task 18 in stage 6 │›│
│ │     —                   │     —                   │     —                   │     —                   │     —                   │     —                  │›│
│ │                         │                         │                         │                         │                         │                        │›│
│ │                         │                         │                         │                         │                         │                        │›│
│ │                         │                         │                         │                         │                         │                        │›│
│ │                         │                         │                         │                         │                         │                        │›│
│ │                         │                         │                         │                         │                         │                        │›│
│ │                         │                         │                         │                         │                         │                        │›│
│ │                         │                         │                         │                         │                         │                        │›│
│ │                         │                         │                         │                         │                         │                        │›│
│ │                         │                         │                         │                         │                         │                        │›│
│ │                         │                         │                         │                         │                         │                        │›│
│ │                         │                         │                         │                         │                         │                        │›│
│ │                         │                         │                         │                         │                         │                        │›│
│ │                         │                         │                         │                         │                         │                        │›│
│ │                         │                         │                         │                         │                         │                        │›│
│ │                         │                         │                         │                         │                         │                        │›│
│ │                         │                         │                         │                         │                         │                        │›│
│ │                         │                         │                         │                         │                         │                        │›│
│ │                         │                         │                         │                         │                         │                        │›│
│ │                         │                         │                         │                         │                         │                        │›│
│ │                         │                         │                         │                         │                         │                        │›│
│ │                         │                         │                         │                         │                         │                        │›│
│ │                         │                         │                         │                         │                         │                        │›│
│ │                         │                         │                         │                         │                         │                        │›│
│ │                         │                         │                         │                         │                         │                        │›│
│ │                         │                         │                         │                         │                         │                        │›│
│ │                         │                         │                         │                         │                         │                        │›│
│ │                         │                         │                         │                         │                         │                        │›│
│ │                         │                         │                         │                         │                         │                        │›│
│ │                         │                         │                         │                         │                         │                        │›│
│ │                         │                         │                         │                         │                         │                        │›│
│ │                         │                         │                         │                         │                         │                        │›│
│ │                         │                         │                         │                         │                         │                        │›│
│ │                         │                         │                         │                         │                         │                        │›│
│ │                         │                         │                         │                         │                         │                        │›│
│ │                         │                         │                         │                         │                         │                        │›│
│ │                         │                         │                         │                         │                         │                        │›│
│ └─────────────────────────┴─────────────────────────┴─────────────────────────┴─────────────────────────┴─────────────────────────┴────────────────────────┘ │
│                                                                                                                                                              │
│                                                                                                                                                              │
│ ? help  / search  n new  c claim  m move  a assign  ↵ open  q quit                                                                                           │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;
